--- a/index.html
+++ b/index.html
@@ -8,32 +8,36 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-    <h1>ola mundo</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur sequi deserunt iure eum. Natus, distinctio. Quisquam, excepturi hic, corrupti eligendi aliquid impedit ipsam, magnam incidunt harum eum dicta suscipit quis.</p>
+  <nav class="navbar sticky-top">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img src="imagens/netflix.png" alt="Bootstrap" width="100" height="110" style="margin-left: 50px;">
+      </a>
+      
+      <div class="position-absolute top-50 start-50 translate-middle">
+       <form class="d-flex" role="search">
+        <input class="form-control me-2"  type="search" placeholder="Pesquisar" aria-label="Search" id="search-bar" style="width: 550px;">
+       <button class="btn" type="submit">Buscar</button>
+      </form>
+    </div>
+    </div>
+   
+  </nav>
 
-    <p class="d-inline-flex gap-1">
-        <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-          Link with href
-        </a>
-        <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-          Button with data-bs-target
-        </button>
-      </p>
-      <div class="collapse" id="collapseExample">
-        <div class="card card-body">
-          Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
-        </div>
-      </div>
+  <div class="card" style="width: 18rem;">
+    <img src="..." class="card-img-start" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Nome do Filme</h5>
+      <h6 class="card-subtitle mb-2 text-body-secondary">Direção</h6>
+      <h6 class="card-subtitle mb-2 text-body-secondary">Duração</h6>
+      <h6 class="card-subtitle mb-2 text-body-secondary">Ano de Lançamento</h6>
+      <p class="card-text">Resumo do filme</p>
+      <a href="#" class="card-link">Sem links</a>
+      <a href="#" class="card-link">Another link</a>
+    </div>
+  </div>
 
-      <div class="card">
-        <div class="card-body">
-          This is some text within a card body.
-        </div>
-      </div>
-
-
-    <script src="script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  <script src="script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
