começando usar o fetch

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="position-absolute top-50 start-50 translate-middle">
        <form class="d-flex" role="search">
         <input class="form-control me-2"  type="search" placeholder="Pesquisar" aria-label="Search" id="search-bar" style="width: 550px;">
-       <button class="btn" type="submit">Buscar</button>
+       <button class="btn" type="button" onclick="buscar()">Buscar</button>
       </form>
     </div>
     </div>
