parei na conversão de genero

--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
   <div class="card" style="width: 18rem;">
     <img src="..." class="card-img-start" alt="...">
     <div class="card-body">
-      <h5 class="card-title">Nome do Filme</h5>
-      <h6 class="card-subtitle mb-2 text-body-secondary">Direção</h6>
-      <h6 class="card-subtitle mb-2 text-body-secondary">Duração</h6>
-      <h6 class="card-subtitle mb-2 text-body-secondary">Ano de Lançamento</h6>
-      <p class="card-text">Resumo do filme</p>
-      <a href="#" class="card-link">Sem links</a>
-      <a href="#" class="card-link">Another link</a>
+      <h4 class="card-title" id="title">Nome do Filme</h4>
+      <h5 class="card-subtitle mb-2 text-body-secondary" id="vote_average">Nota do público</h5>
+      <h6 class="card-subtitle mb-2 text-body-secondary" id="genre">Gênero</h6>
+      <h6 class="card-subtitle mb-2 text-body-secondary" id="release_date">Data de Lançamento</h6>
+      
+      <p class="card-text" id="overview">Resumo do filme</p>
+      <!-- <a href="#" class="card-link">Sem links</a> -->
+      <!-- <a href="#" class="card-link">Another link</a> -->
     </div>
   </div>
 
