--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id="body">
   <nav class="navbar sticky-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="index.html">
         <img src="imagens/netflix.png" alt="Bootstrap" width="100" height="110" style="margin-left: 50px;">
       </a>
       
@@ -38,11 +38,10 @@
           <p class="card-text" id="overview">Resumo do filme</p>
         </div>
       </div>
-    </div>
-  </div> -->
+    </div> -->
+  </div>
 
   <script src="script.js"></script>
-  <!-- <script src="JScopia.js"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
