--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
 </head>
 <body id="body">
   <nav class="navbar sticky-top">
-    <div class="container-fluid">
+    <div class="container-fluid" id="container">
       <a class="navbar-brand" href="index.html">
-        <img src="imagens/netflix.png" alt="Bootstrap" width="100" height="110" style="margin-left: 50px;">
+        <img src="imagens/netflix.png" alt="Bootstrap" width="100" height="110"  id="imagem">
       </a>
       
-      <div class="position-absolute top-50 start-50 translate-middle">
+      <div class="translate-middle d-flex" id="barra-de-pesquisa">
        <form class="d-flex" role="search">
-        <input class="form-control me-2"  type="search" placeholder="Pesquisar" aria-label="Search" id="search-bar" style="width: 550px;">
-       <button class="btn" type="button" onclick="buscar()">Buscar</button>
+        <input class="form-control me-2"  type="search" placeholder="Pesquisar" aria-label="Search" id="search-bar">
       </form>
+      <button class="btn" type="button" onclick="buscar()">Buscar</button>
+      
     </div>
     </div>
    
